--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ opt-level = 1  # Note: 2 or above seems to cause deno runtime errors.
 
 [dependencies]
 # Apollo internal dependencies
-apollo-compiler = "1.0.0-beta.24"
-apollo-federation = { git = "https://github.com/apollographql/router", branch = "dev" }
+apollo-compiler = "1.25.0"
+apollo-federation = { git = "https://github.com/apollographql/router", branch = "1.x" }
 router-bridge = "=0.6.4+v2.9.3"
 
 # Other dependencies
